# MyFlutterTorchLib

torch_cpp/: README.md  ffigen.yaml  pubspec.yaml
torch_cpp/android/: build.gradle  settings.gradle
torch_cpp/android/src/main/: AndroidManifest.xml
torch_cpp/ios/: torch_cpp.podspec
torch_cpp/ios/Classes/: torch.cpp
torch_cpp/lib/: bindings_generated.dart  torch_cpp.dart
torch_cpp/macos/: torch_cpp.podspec
torch_cpp/macos/Classes/: torch.cpp
torch_cpp/macos/Libs/cjson/: libcjson.dylib  libcjson_utils.dylib
torch_cpp/src/: CMakeLists.txt  torch.cpp  torch.h
torch_ffi/: README.md  ffigen.yaml  pubspec.yaml
torch_ffi/ios/: torch_ffi.podspec
torch_ffi/ios/Classes/: torch_ffi.c
torch_ffi/lib/: bindings_generated.dart  torch_ffi.dart
torch_ffi/macos/: torch_ffi.podspec
torch_ffi/macos/Classes/: torch_ffi.c
torch_ffi/src/: CMakeLists.txt  torch_ffi.c  torch_ffi.h
torch_sr/: .metadata  README.md  ffigen.yaml  pubspec.yaml
torch_sr/ios/: torch_sr.podspec
torch_sr/lib/: bindings_generated.dart  torch_sr.dart
torch_sr/macos/: torch_sr.podspec
torch_sr/macos/Classes/: torch_sr.c
torch_sr/src/: CMakeLists.txt  torch_sr.c  torch_sr.cpp  torch_sr.h  torch_sr.hpp
